cmake_minimum_required(VERSION 3.26)
project(untitled7 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled7 main.c
libs/data_structures/vector/vector.h
        libs/data_structures/vector/vector.c
        libs/data_structures/vectorVoid/vector_void.h.
        libs/data_structures/vectorVoid/vector_void.c
        libs/data_structures/vector/vector.c)
